--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern",
+  "name": "meeto_photographer",
   "version": "1.0.0",
   "description": "Photographers Networking",
   "main": "server.js",
@@ -12,7 +12,8 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "",
+  "keywords": [],
+  "author": "Andre & Eric",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
@@ -20,9 +21,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.16.3",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "mysql2": "^2.0.0",
