--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-flip-move": "^3.0.4",
+    "react-images-upload": "^1.2.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
   },
