--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "firebase": "^7.2.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-flip-move": "^3.0.4",
